@@ -14,5 +14,6 @@
  - Added better logging for the skip command (Jabber).
  - Added a handler to retrieve current track info (WebAPI).
  - Added authentication to certain web api calls.
+ - Added api/status.js (WebAPI).
  - Removed old commands: hotline, icelog, listeners, mail (CLI).
  - Changed tags order in tags/show: subtags go last.
